# pytensor_ml

./: .gitattributes  .gitignore  .pre-commit-config.yaml  environment.yml  pyproject.toml  training_test.ipynb
.github/workflows/: mypy.yml  release.yml  rtd-link-preview.yml  run_tests.yml
conda_envs/: pytensor_ml-gpu_jax.yml  pytensor_ml.yml
examples/: mnist_feed_forward.ipynb
pytensor_ml/: __init__.py  _version.py  activations.py  attention.py  checkpoint.py  json_serialize.py  layers.py  loss.py  model.py  optimizers.py  params.py  pretrained.py  pytensorf.py  state.py  transformer.py  util.py
pytensor_ml/dispatch/: __init__.py
pytensor_ml/dispatch/jax/: __init__.py  attention.py
pytensor_ml/dispatch/mlx/: __init__.py  attention.py
pytensor_ml/optim/: __init__.py  alias.py  base.py  clipping.py  rules.py  train.py  transform.py
pytensor_ml/pymc/: model_transforms.py
pytensor_ml/rewriting/: layers.py
pytensor_ml/serialize/: __init__.py  blockwise.py  builders.py  elemwise.py  scalar.py  scan.py
scripts/: mypy-failing.txt  run_mypy.py
tests/: conftest.py  test_activations.py  test_attention.py  test_checkpoint.py  test_layers.py  test_loss.py  test_model.py  test_optimizers.py  test_params.py  test_pretrained.py  test_pytensorf.py  test_serialize.py  test_state.py  test_transformer.py
tests/dispatch/jax/: test_attention.py  test_basic.py
tests/dispatch/mlx/: test_attention.py  test_basic.py
tests/optim/: conftest.py  test_clipping.py  test_rules.py  test_training.py  test_transform.py
tests/rewriting/: test_layers.py
