[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"


[project]
name = "pytensor_ml"
dynamic = ["version"]
description = "A(nother) deep learning library, built on top of Pytensor"
readme = "README.md"
requires-python = ">=3.12"
authors = [{name="Jesse Grabowski", email='jessegrabowski@gmail.com'}, {name="Ricardo Vieira"}]
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python",
  "Topic :: Scientific/Engineering",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
keywords = [
  "neural network",
  "deep learning",
  "autograd",
  "gradient descent",
  "pymc"
]

dependencies = [
  "pytensor>=3.0.0,<4.0.0",
  "numpy",
  "pymc>=6.0.0,<7.0.0"
]

[project.urls]
Homepage = "https://github.com/jessegrabowski/pytensor_ml"
Source = "https://github.com/jessegrabowski/pytensor_ml"
Tracker = "https://github.com/jessegrabowski/pytensor_ml/issues"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "pytest-cov",
    "scikit-learn",
    "mypy",
    "polars"
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "pytensor_ml/_version.py"


[tool.pytest.ini_options]
minversion = "6.0"
xfail_strict=true
filterwarnings = [
    "error",
    'ignore:\nArviZ is undergoing a major refactor.*:FutureWarning',
    # pytensor silences this on import, but our "error" rule above resets the
    # warnings filter per-test and undoes it. Numba emits it from the numba
    # linker, which is pytensor 3's default.
    "ignore::numba.core.errors.NumbaPerformanceWarning",
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["pytensor_ml/_version.py"]

[tool.ruff.lint]
select = ["D", "E", "F", "I", "UP", "W", "RUF", "TID252"]
ignore = [
  "E501",  # Line too long
  "RUF001", # String contains ambiguous character (such as Greek letters)
  "RUF002", # Docstring contains ambiguous character (such as Greek letters)
  "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
  "RUF059", # Unpacked variable is never used (noisy for `X, y = fixture` unpacking)
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D107",
  "D200",
  "D202",
  "D203",
  "D204",
  "D205",
  "D209",
  "D212",
  "D213",
  "D301",
  "D400",
  "D401",
  "D403",
  "D413",
  "D415",
  "D417",
]
fixable = ["ALL"]


[tool.ruff.lint.isort]
lines-between-types = 1


[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict_equality = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
files = ["pytensor_ml"]
